# fractal-curve-tokenizer_podman

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  README_zh.md  check_environment.py  docker-compose.yml  entrypoint.sh  main.py  manage.ps1  manage.sh  podman-manage.ps1  podman-manage.sh  pyproject.toml  quickstart-uv.ps1  quickstart-uv.sh  quickstart.ps1  quickstart.sh  uv.toml
config/: .env.example  uv.toml
docker/: Dockerfile  Dockerfile.jupyter  docker-compose.yml  entrypoint.sh
docs/: CONTAINERIZATION_SUMMARY.md  CONTAINER_GUIDE.md  MIGRATION_SUMMARY.md
scripts/: podman-manage.ps1  podman-manage.sh
tests/: README.md
tests/training_scripts/: train_fractal_vit.py  train_fractal_vit_complete.py
vit_pytorch/: __init__.py  fractal_curve_tokenizer.py  fractal_curve_tokenizer_backup.py  fractal_vit.py
