[project]
name = "fractal-curve-tokenizer_podman"
version = "0.1.0"
description = "A novel Vision Transformer implementation using fractal Hilbert curve tokenization for hierarchical image processing with adaptive patch splitting and multi-scale attention mechanisms"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.7.0",
    "manimgl>=1.7.2",
    "pytest>=8.4.1",
    "pytest-runner>=6.0.1",
    "seaborn>=0.13.2",
    "torch==2.4.0",
    "torchvision==0.19.0",
    "wandb>=0.21.1",
]

[project.optional-dependencies]
dev = [
    "jupyterlab>=4.0.0",
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
    "matplotlib>=3.7.0",
    "plotly>=5.15.0",
    "ipykernel>=6.25.0",
    "notebook>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

test = [
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-benchmark>=4.0.0",
    "coverage>=7.2.0",
]

[project.scripts]
fractal-tokenizer = "vit_pytorch.fractal_curve_tokenizer:main"
debug-tokenizer = "debug_tokenizer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "jupyterlab>=4.0.0",
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
    "matplotlib>=3.7.0",
    "plotly>=5.15.0",
    "ipykernel>=6.25.0",
    "notebook>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-benchmark>=4.0.0",
    "coverage>=7.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=vit_pytorch",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "manimgl.*",
    "wandb.*",
    "seaborn.*",
]
ignore_missing_imports = true
