[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fractal-curve-tokenizer_podman"
version = "0.1.0"
description = "A novel Vision Transformer implementation using fractal Hilbert curve tokenization for hierarchical image processing with adaptive patch splitting and multi-scale attention mechanisms"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "einops>=0.7.0",
    "manimgl>=1.7.2",
    "pytest>=8.4.1",
    "pytest-runner>=6.0.1",
    "seaborn>=0.13.2",
    "torch==2.4.0",
    "torchvision==0.19.0",
    "wandb>=0.21.1",
    "jupyterlab>=4.0.0",
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
    "matplotlib>=3.7.0",
    "plotly>=5.15.0",
    "ipykernel>=6.25.0",
    "notebook>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "manimpango>=1.0.0a2",
]

[project.optional-dependencies]
test = [
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-benchmark>=4.0.0",
    "coverage>=7.2.0",
]

